# honsalim

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  build_headers_draft.txt  pyproject.toml  wrangler.toml
.claude/: settings.json
.claude/commands/: honsalim-end.md  honsalim-save.md  honsalim-start.md
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  security.yml
docs/: ARCH.md  ARCH_MODULE_DIAGNOSIS.md  ARTICLE_LAYOUT_TIER2.md  AUTOMATION.md  BACKEND.md  BACKUP.md  CATEGORY_PAGE.md  CHANGELOG.md  DB.md  DECISIONS.md  DESIGN.md  EVENTS.md  FRONTEND.md  GOOGLE_AI_OPTIMIZATION.md  IMAGE_GENERATION.md  KEY_DECISIONS_REVIEW.md  MAINTENANCE.md  OPS.md  PIP_AUDIT_ANALYSIS.md  PLAN.md  POLICY.md  REVIEW_QUESTIONS.md  SCENARIOS.md  SCHEDULE.md  SCHEDULER_GUIDE.md  STATE.md  SUMMARY.md  SUMMARY_PATCH_v1.1.md  TODO.md  VALIDATOR_PATTERNS.md
docs/archive/: EVENTS_202605.md  EVENTS_202606.md  EVENTS_202607.md
docs/design_drafts/: CHOICE.md
functions/go/: [[path]].js
placeholder/: index.html
scripts/: all_products_prototype.py  apply_chair_taxonomy.py  category_page_prototype.py  check_size_caps.py  cleanup_keyword_scenarios.bat  cleanup_keyword_scenarios.py  deploy_go_gateway.py  gen_persona_images.py  launch_dashboard.vbs  preview_build.py  run_auto_cycle.ps1  run_dashboard.ps1  run_publish_queue.ps1  run_refresh_cycle.ps1  run_tests.py  update_and_requeue.bat
sql/d1/: schema.sql
sql/migrations/: 001_initial_schema.sql  002_categories.sql  003_category_content.sql  004_category_structured.sql  005_category_concept_image.sql  006_product_signals.sql  007_keyword_queue.sql  008_article_structured.sql  009_api_usage.sql
sql/seeds/: 001_personas_scenarios.sql  002_categories.sql  003_categories_living.sql
src/: cli.py
src/builder/: __init__.py  go_function.py  jsonld.py  manifest.py  renderer.py
src/collector/: __init__.py  aliexpress.py  category_autopilot.py  category_collect.py  category_config_gen.py  category_coupang.py  category_sources.yml  coupang.py  coupang_manual.py  coupang_products.yml  keyword_map.py  keyword_relevance.py  keyword_research.py  naver_searchad.py  product_filter.py  products_store.py  scenario_loader.py  search_keywords.yml  seo_keywords.py  seo_keywords.yml  (+1 more)
templates/: 404.html  about.html  article.html  base.html  categories_index.html  category.html  guides_index.html  home.html  method.html  persona_hub.html  pillar.html  privacy.html  review.html  scenario_list.html
tests/: conftest.py  test_aliexpress_collector.py  test_api_usage.py  test_article_guardrail.py  test_article_state.py  test_article_writer.py  test_auto_approve.py  test_auto_cycle.py  test_category_autopilot.py  test_category_collect.py  test_category_config_gen.py  test_category_coupang.py  test_category_guardrail.py  test_category_page.py  test_category_state.py  test_category_writer.py  test_check_size_caps.py  test_cli.py  test_cli_keyword.py  test_concept_image.py  test_coupang_collect.py  test_coupang_manual.py  test_dashboard.py  test_dashboard_app_smoke.py  test_dashboard_guide.py  test_dashboard_queries.py  test_db.py  test_deploy_workflow.py  test_deployer.py  test_design_tokens.py  test_enricher.py  test_enricher_retry.py  test_indexnow.py  test_integration_phase2.py  test_jsonld_builder.py  test_keyword_map.py  test_keyword_queue.py  test_keyword_recommender.py  test_keyword_relevance.py  test_keyword_research.py  (+25 more)
(+73 files in other folders)
